[package]
name = "templar"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"

[dependencies]
unstructured = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
pest = "2.1"
pest_derive = "2.1"
lazy_static = "1.4"
serde_yaml = "0.8"
serde_json = "1.0"
parking_lot = "0.9"
base64 = "0.10"