[package]
name = "templar"
description = "Templating framework with first class support for configuration templating"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
repository = "https://github.com/proctorlabs/templar"
keywords = []
categories = []
license = "MIT"
readme = "README.md"

[dependencies]
#General dependencies
unstructured = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
pest = "2.1"
pest_derive = "2.1"
lazy_static = "1.4"
parking_lot = "0.9"
serde_yaml = "0.8"
serde_json = "1.0"
base64 = "0.10"

#Binary dependencies
clap = { version = "2.33", optional = true }
structopt = { version = "0.3", optional = true }
serde-xml-rs = { version = "0.3", optional = true }
toml = { version = "0.5", optional = true }

[features]
bin = ["clap", "structopt", "serde-xml-rs", "toml"]

[lib]
name = "templar"
path = "src/lib.rs"

[[bin]]
name = "templar"
path = "src/main.rs"
required-features = ["bin"]
