[package]
name = "templar"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
description = "Lightweight, fast, and powerful templating engine"
documentation = "https://docs.rs/templar"
version = "0.5.0"
edition = "2018"
repository = "https://github.com/proctorlabs/templar"
keywords = ["cli", "template", "templating", "handlebars", "jinja"]
categories = ["template-engine"]
license = "MIT/Apache-2.0"
readme = "../README.md"
exclude = [".github/**", "docs/**"]
workspace = "../"

[package.metadata.deb]
maintainer = "Phil Proctor <philliptproctor@gmail.com>"
copyright = "2020, templar development team"
license-file = ["LICENSE-MIT", "5"]
extended-description = """\
Templar is a command for processing template files with \
a Jinja2 inspired syntax and using a variety of data sources \
as an input."""
depends = "$auto"
section = "utility"
priority = "optional"

[dependencies]
templar_macros = { path = "../templar_macros", version = "0.5.0" }

# General dependencies
unstructured = { version = "0.5.1", default_features = false, features = [] }
lazy_static = "1.4"
pest = "2.1"
pest_derive = "2.1"
derive_more = "0.99"

# Optional serde deps
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_yaml = { version ="0.8", optional = true }
serde_json = { version ="1.0", optional = true }
toml = { version = "0.5", optional = true }
serde-xml-rs = { version = "0.4", optional = true }

# Misc optionals
parking_lot = { version = "0.11", optional = true }
base64 = { version = "0.13", optional = true }

# Binary deps
clap = { version = "2.33", optional = true }
structopt = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
default = ["shared-context", "yaml-extension", "json-extension", "base64-extension"]

#ser/deser extensions
toml-extension = ["serde", "toml"]
xml-extension = ["serde", "serde-xml-rs"]
json-extension = ["serde", "serde_json"]
yaml-extension = ["serde", "serde_yaml"]

#other
shared-context = ["parking_lot"]
base64-extension = ["base64"]

#groups
serde-extensions = ["toml-extension", "xml-extension", "json-extension", "yaml-extension"]
common-extensions = ["serde-extensions", "base64-extension"]
full = ["serde-extensions", "base64-extension", "shared-context"]

#binary
bin = ["clap", "structopt", "common-extensions"]

experimental = []

[lib]
name = "templar"
path = "src/lib.rs"

[[bin]]
name = "templar"
path = "src/main.rs"
required-features = ["bin"]

[[bench]]
name = "templar_benchmark"
harness = false
path = "benches/lib.rs"
