[package]
name = "valkyrie"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
workspace = "../"

[dependencies]
templar = { path = "../templar/" }

# General dependencies
unstructured = { version = "0.5.1", default_features = false, features = [] }
lazy_static = "1.4"
pest = "2.1"
pest_derive = "2.1"
derive_more = "0.99"
