[package]
name = "yaat"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
description = "Yet Another Automation Tool"
edition = "2018"
workspace = "../"

[dependencies]
templar = { path = "../templar"}
unstructured = "0.3.1"

# Binary deps
clap = "2.33"
structopt = "0.3"
termcolor = "1.1"

# Optional serde deps
serde = { version = "1.0", features = ["derive"] }
serde_yaml ="0.8"
serde_json ="1.0"
toml = "0.5"
serde-xml-rs = "0.4"
